# scraibe

./: .env.template  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml
data/: prepare.py
data/notes/: index.csv
db/: mimic.sql
scraibe/: __init__.py  agent.py  bot.py  db.py  pdf.py  store.py  utils.py
tests/: test_agent.py
