[tool.poetry]
name = "scraibe"
version = "0.1.0"
description = "AI Scribe Assistant"
authors = ["Punit Arani <punitsai36@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
intersystems-irispython = {path = "lib/intersystems_irispython-3.2.0-py3-none-any.whl"}
pandas = "^2.1.0"
pymupdf = "^1.23.3"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
